[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Panels/StatPanel.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.054902, 0, 1 )
corner_detail = 16
shadow_size = 2

[node name="StatPanel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Organisation" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1

[node name="NamePanel" type="PanelContainer" parent="Organisation"]
margin_top = 276.0
margin_right = 1024.0
margin_bottom = 305.0

[node name="StatName" type="Label" parent="Organisation/NamePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )

[node name="StatValue" type="Label" parent="Organisation"]
margin_top = 309.0
margin_right = 1024.0
margin_bottom = 324.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
